# bevy-test-game

./: .gitattributes  .gitignore  Cargo.toml
.cargo/: config.toml
assets/models/: tower-001.glb
src/: main.rs
src/gameplay/: buildings.rs  enemy.rs  mod.rs
src/state/: global.rs
src/ui/: menu.rs  mod.rs  player.rs
