[package]
name = "game-with-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_mod_picking = "0.13.0"
bevy_editor_pls = "0.4.0"
rand = "0.8.5"
leafwing-input-manager = "0.9.2"
hexx = "0.6"
